--- a/proyectoinicio/css/style.css
+++ b/proyectoinicio/css/style.css
@@ -16,6 +16,7 @@ body {
     font-size: 16px;
     /* background-color: var(--colorPrincipal); */
     font-family: var(--fuentePrincipal);
+    
     /* background-color: red; */
 }
 
@@ -212,7 +213,12 @@ h1 {
     margin-bottom: 10px;
     padding: 35px;
     color: white;
+    /* box-shadow: 51px 33px 76px -15px rgba(0,0,0,0.9); */
 }
+
+/* h1::before{
+    content: "Texto con pseudoelemento";
+} */
 
     .fondoMain a {
     background-color: black;
@@ -684,9 +690,24 @@ h1 {
 
 .cajas-localizaciones .contenedor div {
     width: 25%;
-    padding: 24px 10px;
+    padding: 24px 0px;
     color: white;
     margin: 0;
+}
+
+@media (max-width:1140px) {
+    .cajas-localizaciones .contenedor div {
+        width: 50%;
+    }
+}
+
+@media (max-width:768px) {
+    .cajas-localizaciones .contenedor{
+        flex-wrap: wrap;
+    }
+    .cajas-localizaciones .contenedor div {
+        width: 100%;
+    }
 }
 
 .cajas-localizaciones h2 {
@@ -733,6 +754,8 @@ h1 {
     flex-direction: row;
 }
 
+
+
 .ContactoCuadros img {
     margin-right: 15px;
 }
@@ -759,6 +782,22 @@ h1 {
     flex: 1;
     max-width: 50%;
     padding: 20px;
+}
+
+@media (max-width:1140px) {
+    .ContactoCuadros{
+        flex-direction: column;
+    }
+
+    .cuadro1,.cuadro2{
+        max-width: 100%;
+        margin: 10px 0px;
+    }
+
+    .ContactoCuadros img {
+        height: 60px;
+    }
+
 }
 
 
@@ -827,10 +866,27 @@ h1 {
 }
 
 
-.seccionEnlaces {
 
+.seccionImagen {
+    display: flex;
+    max-width: 45%;
+    flex-direction: column;
+    justify-content: end;
+}
+.seccionEnlaces {
+    max-width: 55%;
     display: flex;
     flex-direction: column;
+}
+
+@media (max-width:768px){
+    .seccionHeader{
+        flex-direction: column;
+    }
+    .seccionImagen,.seccionEnlaces{
+        max-width: 100%;
+        align-items: center;
+    }
 }
 
 .seccionLogin {
@@ -884,10 +940,10 @@ h1 {
     text-decoration: none !important;
 }
 
-.seccionImagen {
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
+
+
+.seccionImagen img{
+    max-width: 100%;
 }
 
 
