--- a/Clases/20231005.css
+++ b/Clases/20231005.css
@@ -32,7 +32,7 @@ COMIENZO CLASE 2023/10/05
         CLASES, IRLAS AGRUPANDO POR SECCIONES, HEADER, BANNER, CURSOS...
 
     DEGRADADO Y SOMBRAS EN CSS CON CSSMATIC
-        BACKGROUND-IMAGE: LINEAR GRADIENT ( TO TOP, 0% WHITE, 100& RED)
+        BACKGROUND-IMAGE: LINEAR GRADIENT ( TO TOP, 0% WHITE, 100% RED)
         box-shadow: 11px 10px 5px 0px rgba(0, 0, 0, 0.75);
 
     CON CSSMATIC PODIAMOS GENERAR EL CÓDIGO DIRETAMENTE
@@ -81,6 +81,13 @@ ______________________
 |___|_______|_________|
 
 CUANDO USAR FLEX O GRID
+
+
+
+
+
+
+
 
 !!!!!!!!!!!!!!!!!!!
 DIAPOSITIVA 13
