--- a/pontealdia/style.css
+++ b/pontealdia/style.css
@@ -214,3 +214,57 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#93cede', end
     right: 200px;
     box-shadow: 51px 33px 76px -15px rgba(0,0,0,0.9);
 }
+
+.ejercicioGrid div{
+    border: 1px solid black;
+}
+
+
+
+
+.ejercicioGrid{
+    display: grid;
+    grid-template-columns: 20% 30% 50%;
+    grid-template-rows: 200px 100px;
+}
+
+.ejercicioGrid1 div{
+    border: 1px solid black;
+}
+
+.ejercicioGrid1{
+    display: grid;
+    /* grid-template-columns: 50% 50%; */
+    grid-template-columns: 2fr 6fr;
+    grid-template-rows: 50px 300px 100px 200px;
+}
+
+.ejercicioGrid2 div{
+    border: 1px solid black;
+}
+
+.ejercicioGrid2{
+    display: grid;
+    height: 500px;
+    grid-template-columns: 1fr 3fr 2fr 1.5fr;
+    grid-template-rows: 5fr 15fr 16fr 7fr;
+}
+
+
+.ejercicioRepeat{
+    display: grid;
+    height: 300px;
+    /* grid-template-rows: 2fr 2fr;
+    grid-template-columns: 1fr 1fr;
+     */
+    /* grid: 2fr 2fr/ 1fr 1fr; */
+    grid: repeat(2,2fr) / repeat(2,1fr);
+    /* column-gap: 20px;
+    row-gap: 20px; */
+    gap:20px;
+}
+
+
+.ejercicioRepeat div{
+    border: 1px solid red;
+}
