--- a/proyectoinicio/css/style.css
+++ b/proyectoinicio/css/style.css
@@ -16,7 +16,7 @@ body {
     font-size: 16px;
     /* background-color: var(--colorPrincipal); */
     font-family: var(--fuentePrincipal);
-    
+
     /* background-color: red; */
 }
 
@@ -174,18 +174,19 @@ h6{
 }
 
 @media (max-width:1140px) and (min-width:768px) {
-    .contenedor{
+    .contenedor {
         max-width: 80%;
         margin: 0 auto;
     }
 }
 
 @media (max-width:768px) {
-    .contenedor{
+    .contenedor {
         max-width: 90%;
         margin: 0 auto;
     }
 }
+
 /* ESTILOS PARA EL MAIN  */
 
 .fondoMain {
@@ -200,7 +201,7 @@ h6{
 }
 
 @media (max-width:1140px) {
-    .margenDerecho{
+    .margenDerecho {
         margin-right: 0;
     }
 }
@@ -220,7 +221,7 @@ h1 {
     content: "Texto con pseudoelemento";
 } */
 
-    .fondoMain a {
+.fondoMain a {
     background-color: black;
     color: white;
     border: 2px solid black;
@@ -233,7 +234,7 @@ h1 {
 }
 
 @media (max-width:768px) {
-    .fondoMain a{
+    .fondoMain a {
         padding: 24px 70px;
     }
 }
@@ -243,10 +244,10 @@ h1 {
     flex-direction: row;
     /*POR DEFECTO ES ROW*/
     justify-content: space-between;
-    
+
 }
 
-.flexMain img{
+.flexMain img {
     margin-right: 10px;
 }
 
@@ -266,31 +267,31 @@ h1 {
     border-radius: 12px;
 }
 
-@media (max-width:1140px) and (min-width:768px){
- 
-    [src="./img/Logos-oficiales.png"]{
+@media (max-width:1140px) and (min-width:768px) {
+
+    [src="./img/Logos-oficiales.png"] {
         max-width: 70%;
         /* margin: 0px 40px; */
     }
 
-    [src="./img/Logo-Adecco.png"]{
+    [src="./img/Logo-Adecco.png"] {
         max-width: 30%;
         /* margin: 0px 40px; */
     }
 }
 
 @media (max-width:768px) {
-    .logos{
+    .logos {
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
 
-    .logos img{
+    .logos img {
         max-width: 90%;
         padding: 20px;
     }
-    
+
 }
 
 /* ESTILOS SECCION CURSOS  */
@@ -359,10 +360,10 @@ h1 {
 }
 
 @media (max-width:768px) {
-    .cursosOfertados{
+    .cursosOfertados {
         flex-direction: column;
     }
-    
+
 }
 
 .cursosOfertados>div {
@@ -375,22 +376,23 @@ h1 {
     justify-content: space-between;
     min-height: 300px;
 }
+
 @media (max-width:1140px) {
-    .cursosOfertados>div{
+    .cursosOfertados>div {
         padding: 20px 30px;
-        
+
     }
 }
 
 @media (max-width:768px) {
-    .cursosOfertados>div{
+    .cursosOfertados>div {
         margin-right: 0;
         margin-left: 0;
         margin-bottom: 15px;
         margin-top: 15px;
         max-width: 100%;
     }
-    
+
 }
 
 .marketing {
@@ -497,13 +499,14 @@ h1 {
 }
 
 @media (max-width:1140px) {
-    .video iframe{
+    .video iframe {
         width: 100%;
         height: 350px;
     }
 }
+
 @media (max-width:768px) {
-    .video iframe{
+    .video iframe {
         width: 100%;
         height: 200px;
     }
@@ -522,10 +525,10 @@ h1 {
 }
 
 @media (max-width:1140px) {
-    .seccionParaQuien{
+    .seccionParaQuien {
         flex-direction: column;
     }
-    
+
 }
 
 .seccionParaQuien>div {
@@ -535,9 +538,9 @@ h1 {
 
 @media (max-width:1140px) {
     .seccionParaQuien>div {
-    flex: 1;
-    max-width: 100%;
-}
+        flex: 1;
+        max-width: 100%;
+    }
 }
 
 .seccionParaQuien h3 {
@@ -683,6 +686,7 @@ h1 {
     background-color: black;
     padding: 100px 0;
 }
+
 /* 
 .cajas-localizaciones .contenedor {
     display: flex;
@@ -695,10 +699,10 @@ h1 {
     margin: 0;
 }
 
-.cajas-localizaciones .contenedor{
+.cajas-localizaciones .contenedor {
     display: grid;
     /* grid:1fr/1fr 1fr 1fr 1fr; */
-    grid:1fr/repeat(4,1fr);
+    grid: 1fr/repeat(4, 1fr);
 }
 
 @media (max-width:1140px) {
@@ -708,9 +712,10 @@ h1 {
 }
 
 @media (max-width:768px) {
-    .cajas-localizaciones .contenedor{
+    .cajas-localizaciones .contenedor {
         flex-wrap: wrap;
     }
+
     .cajas-localizaciones .contenedor div {
         width: 100%;
     }
@@ -791,11 +796,12 @@ h1 {
 }
 
 @media (max-width:1140px) {
-    .ContactoCuadros{
+    .ContactoCuadros {
         flex-direction: column;
     }
 
-    .cuadro1,.cuadro2{
+    .cuadro1,
+    .cuadro2 {
         max-width: 100%;
         margin: 10px 0px;
     }
@@ -805,9 +811,6 @@ h1 {
     }
 
 }
-
-
-
 
 
 
@@ -879,17 +882,20 @@ h1 {
     flex-direction: column;
     justify-content: end;
 }
+
 .seccionEnlaces {
     max-width: 55%;
     display: flex;
     flex-direction: column;
 }
 
-@media (max-width:768px){
-    .seccionHeader{
+@media (max-width:768px) {
+    .seccionHeader {
         flex-direction: column;
     }
-    .seccionImagen,.seccionEnlaces{
+
+    .seccionImagen,
+    .seccionEnlaces {
         max-width: 100%;
         align-items: center;
     }
@@ -948,7 +954,7 @@ h1 {
 
 
 
-.seccionImagen img{
+.seccionImagen img {
     max-width: 100%;
 }
 
@@ -1012,3 +1018,99 @@ FONDO AZUL. (MIRAR PIZARRA)*/
     justify-content: flex-start;
     align-items: end;
 } */
+
+
+
+
+.repaso {
+
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    height: 900px;
+    /* background-color: red; */
+}
+
+.repaso div {
+
+    border: 10px solid black;
+
+}
+
+.ultimoDiv{
+    grid-column: 1/3;
+    grid-row: 3/4;
+}
+
+
+.repasoGrid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    height: 900px;
+
+}
+
+.repasoGrid div{
+    border:3px solid hotpink;
+
+}
+
+.primerD{
+    grid-column: 1/3;
+    grid-row: 3/5;
+}
+
+.segundoD{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.tercerD{
+    grid-column: 3/4;
+    grid-row: 1/2;
+}
+.cuartoD{
+    grid-column: 3/4;
+    grid-row: 3/4;
+}
+
+.quintoD{
+    grid-column: 1/2;
+    grid-row: 1/3;
+}
+
+.ejercicioMover{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 100px 200px 100px 100px;
+
+}
+
+.ejercicioMover div{
+    border:3px solid hotpink;
+    background-color: aquamarine;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.ejercicioMover1{
+    grid-column: 4/5;
+    grid-row: 1/3;
+}
+.ejercicioMover2{
+    grid-column: 3/4;
+    grid-row: 1/2;
+}
+.ejercicioMover3{
+    grid-column: 2/5;
+    grid-row: 3/5;
+}
+.ejercicioMover4{
+    grid-column: 1/2;
+    grid-row: 2/5;
+}
+.ejercicioMover5{
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
