--- a/proyectojavascript/style.css
+++ b/proyectojavascript/style.css
@@ -62,3 +62,15 @@
     height: 10000px;
     background-color: red;
 }
+
+.estiloEnlaces{
+    display: flex;
+}
+
+.estiloEnlaces a{
+    margin-right: 3rem;
+}
+
+.fichas{
+    background-color: aqua;
+}
